# gh-actions-playground

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: foo.yml  main.yml
src/: lib.rs  main.rs
